--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,11 @@ trigger:
 pool:
   vmImage: 'macOS-latest'
 
-# variables:
+variables:
   # GOBIN:  '$(GOPATH)/bin' # Go binaries path
   # GOROOT: '/usr/local/go1.11' # Go installation path
-  # GOPATH: '$(system.defaultWorkingDirectory)/gopath' # Go workspace path
-  # modulePath: '$(GOPATH)/src/github.com/$(build.repository.name)' # Path to the module's code
+  GOPATH: '$(system.defaultWorkingDirectory)/gopath' # Go workspace path
+  modulePath: '$(GOPATH)/src/github.com/$(build.repository.name)' # Path to the module's code
 
 steps:
 # - script: |
